adding namespace support

--- a/config.toml
+++ b/config.toml
@@ -1,16 +1,17 @@
 [server]
 port="3000"
 [database]
-host="localhost"
+host="127.0.0.1"
 port="5432"
 name="postgres"
 [vault]
-host="localhost"
+host="127.0.0.1"
 port="8200"
 scheme="http"
 authentication="token"
+namespace="trainer"
 [vault.credential]
-#token="000000000000000000000000"
+#token="s.000000000000000000000000"
 [vault.database]
 mount="database"
 role="order"
