--- a/examples/kubernetes/config.toml
+++ b/examples/kubernetes/config.toml
@@ -1,14 +1,25 @@
+[server]
+port="3000"
 [database]
 host="localhost"
 port="5432"
 name="postgres"
-mount="database"
-role="order"
 [vault]
 host="localhost"
 port="8200"
 scheme="http"
-mount="kubernetes"
 authentication="kubernetes"
-credential="/var/run/secrets/kubernetes.io/serviceaccount/token"
+mount="kubernetes"
 role="order"
+[vault.credential]
+serviceaccount="/var/run/secrets/kubernetes.io/serviceaccount/token"
+[vault.database]
+mount="database"
+role="order"
+[vault.transit]
+key="order"
+mount="transit"
+[vault.pki]
+mount="pki"
+role="order"
+cn="order.hashidemos.io"
